--- a/src/Grid.css
+++ b/src/Grid.css
@@ -31,6 +31,7 @@
     filter: blur(1.9em);
     position: absolute;
     z-index: -1;
+    margin-bottom: 20px;
 }
 
 .Grid-title-container {
@@ -44,14 +45,23 @@
 
 .Grid h1 {
     font-size: 5rem;
-    /* color: white; */
     margin: 20px 0;
 }
 
 .Grid-title-one {
-    color: orange;
+    color: rgb(255, 196, 0);
+    text-shadow: 5px 5px 5px rgba(255, 166, 0, 0.25);
+    animation: blinker 500ms linear infinite;
 }
 
 .Grid-title-two {
     color: rgb(0, 145, 255);
+    text-shadow: 5px 5px 5px rgba(0, 145, 255, 0.25);
+    animation: blinker 1.5s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0.5;
+    }
 }
